Templates: Misc changes

--- a/app/design/adminhtml/default/default/template/catalog/form/renderer/fieldset/element.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/form/renderer/fieldset/element.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2018-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -33,7 +33,7 @@
     </td>
     <td class="scope-label"><span class="nobr"><?= $this->getScopeLabel() ?></span></td>
     <?php if ($this->canDisplayUseDefault()): ?>
-    <td class="value use-default">
+    <td class="use-default">
         <input <?php if($_element->getReadonly()):?> disabled="disabled"<?php endif ?> type="checkbox" name="use_default[]" id="<?= $_element->getHtmlId() ?>_default"<?php if ($this->usedDefault()): ?> checked="checked"<?php endif ?> onclick="<?= $elementToggleCode ?>" value="<?= $this->getAttributeCode() ?>"/>
         <label for="<?= $_element->getHtmlId() ?>_default" class="normal"><?= $this->__('Use Default Value') ?></label>
     </td>
