--- a/app/design/adminhtml/default/default/template/customer/tab/cart.phtml
+++ b/app/design/adminhtml/default/default/template/customer/tab/cart.phtml
@@ -13,11 +13,7 @@
 ?>
 <?php if($this->getCartHeader()): ?>
 <div class="content-header skip-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;"><h4><?= $this->getCartHeader() ?></h4></td>
-        </tr>
-    </table>
+    <h4><?= $this->getCartHeader() ?></h4>
 </div>
 <?php endif ?>
 <?= $this->getGridParentHtml() ?>
