--- a/app/design/adminhtml/default/default/template/bundle/product/edit/bundle/option/search.phtml
+++ b/app/design/adminhtml/default/default/template/bundle/product/edit/bundle/option/search.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2025 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -14,7 +14,7 @@
 <div class="entry-edit">
     <div class="entry-edit-head">
         <div style="float: right;"><?= $this->getButtonsHtml() ?></div>
-        <h4 class="fieldset-legend <?= ($this->getHeaderCssClass()) ? $this->getHeaderCssClass().' icon-head' : '' ?>"><?= $this->getHeaderText() ?></h4>
+        <h4 class="fieldset-legend <?= $this->getHeaderCssClass() ? $this->getHeaderCssClass() : '' ?>"><?= $this->getHeaderText() ?></h4>
     </div>
     <fieldset>
         <?= $this->getChildHtml() ?>
