--- a/app/design/adminhtml/default/default/template/cms/browser/content.phtml
+++ b/app/design/adminhtml/default/default/template/cms/browser/content.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
@@ -14,22 +14,18 @@
  * Wysiwyg Images content template
  *
  * @see Mage_Adminhtml_Block_Cms_Wysiwyg_Images_Content
- * @var Mage_Adminhtml_Block_Cms_Wysiwyg_Images_Content $this 
+ * @var Mage_Adminhtml_Block_Cms_Wysiwyg_Images_Content $this
  */
 ?>
 <?= $this->getChildHtml('wysiwyg_images.js') ?>
 
 <div class="content-header skip-header" id="content_header">
-    <table cellspacing="0">
-        <tr>
-            <td><h3 id="content_header_text"><?= $this->getHeaderText() ?></h3></td>
-            <td class="form-buttons">
-                <?= $this->getButtonsHtml() ?>
-            </td>
-        </tr>
-    </table>
+    <h3 id="content_header_text"><?= $this->getHeaderText() ?></h3>
+    <div class="form-buttons">
+        <?= $this->getButtonsHtml() ?>
+    </div>
 </div>
 
-<div id="contents-uploader"><?= $this->getChildHtml('wysiwyg_images.uploader') ?></div>
-<div id="contents"></div>
+<div id="contents-uploader" class="wysiwyg-uploader"><?= $this->getChildHtml('wysiwyg_images.uploader') ?></div>
+<div id="contents" class="wysiwyg-filelist"></div>
 <div id="contents-newfolder" class="no-display"><?= $this->getChildHtml('wysiwyg_images.newfolder') ?></div>
