--- a/app/design/adminhtml/default/default/template/newsletter/problem/list.phtml
+++ b/app/design/adminhtml/default/default/template/newsletter/problem/list.phtml
@@ -5,19 +5,15 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
 /** @var Mage_Adminhtml_Block_Newsletter_Problem $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;"><h3><?= Mage::helper('newsletter')->__('Newsletter Problem Reports') ?></h3></td>
-            <td class="form-buttons"></td>
-        </tr>
-    </table>
+    <h3><?= Mage::helper('newsletter')->__('Newsletter Problem Reports') ?></h3>
+    <div class="form-buttons"></div>
 </div>
 <div>
     <?= $this->getChildHtml('grid') ?>
