--- a/app/design/adminhtml/default/default/template/report/grid/container.phtml
+++ b/app/design/adminhtml/default/default/template/report/grid/container.phtml
@@ -5,19 +5,19 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
 /** @var Mage_Adminhtml_Block_Widget_Grid_Container $this */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="<?= $this->getHeaderWidth() ?>"><?= $this->getHeaderHtml() ?></td>
-            <td class="form-buttons"><?= $this->getButtonsHtml() ?></td>
-        </tr>
-    </table>
+    <h3 class="<?= $this->getHeaderCssClass() ?>">
+        <?= $this->getHeaderHtml() ?>
+    </div>
+    <div class="form-buttons">
+        <?= $this->getButtonsHtml() ?>
+    </div>
 </div>
 <div>
     <?= $this->getChildHtml('store.switcher') ?>
