--- a/app/design/adminhtml/default/default/template/sales/order/create/store/select.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/create/store/select.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
@@ -23,9 +23,9 @@
                 <?php endif ?>
                 <?php if ($showGroup == false): ?>
                     <?php $showGroup = true; ?>
-                    <h4 style="margin-left:12px;"><?= $this->escapeHtml($_group->getName()) ?></h4>
+                    <h4><?= $this->escapeHtml($_group->getName()) ?></h4>
                 <?php endif ?>
-                <span class="field-row" style="margin-left:28px;">
+                <span class="field-row">
                     <input type="radio" id="store_<?= $_store->getId() ?>" class="radio" onclick="order.setStoreId('<?= $_store->getId() ?>')"/>
                     <label for="store_<?= $_store->getId() ?>" class="inline"><?= $this->escapeHtml($_store->getName()) ?></label>
                 </span>
