--- a/app/design/adminhtml/default/default/template/sales/recurring/profile/view.phtml
+++ b/app/design/adminhtml/default/default/template/sales/recurring/profile/view.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
@@ -21,7 +21,7 @@
     <div class="box-<?= $j == 1 ? 'left' : 'right' ?>">
         <div class="entry-edit">
             <div class="entry-edit-head">
-                <h4 class="icon-head"><?= $this->escapeHtml($this->getObjectData($block, 'view_label')) ?></h4>
+                <h4><?= $this->escapeHtml($this->getObjectData($block, 'view_label')) ?></h4>
             </div>
             <div class="fieldset">
                 <?php $html = $this->getChildHtml($alias) ?>
