--- a/app/design/adminhtml/default/default/template/system/config/switcher.phtml
+++ b/app/design/adminhtml/default/default/template/system/config/switcher.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -28,9 +28,4 @@
       </option>
     <?php endforeach ?>
     </select>
-    <?php if (Mage::getSingleton('admin/session')->isAllowed('system/store')): ?>
-    <p style="margin:10px 0 0;">
-        <a href="<?= $this->getUrl('*/system_store') ?>"><?= $this->__('Manage Stores') ?></a>
-    </p>
-    <?php endif ?>
 </div>
