--- a/app/design/adminhtml/default/default/template/tax/toolbar/rule/add.phtml
+++ b/app/design/adminhtml/default/default/template/tax/toolbar/rule/add.phtml
@@ -5,17 +5,15 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
 <div class="content-header">
-    <table cellspacing="0">
-        <tr>
-            <td style="width:50%;"><h3><?= $header ?></h3></td>
-            <td class="form-buttons">
-                <button class="scalable add" onclick="window.location.href='<?= $createUrl ?>'"><span><?= Mage::helper('tax')->__('Add New Tax Rule') ?></span></button>
-            </td>
-        </tr>
-    </table>
+    <h3><?= $header ?></h3>
+    <div class="form-buttons">
+        <button class="scalable add" onclick="window.location.href='<?= $createUrl ?>'">
+            <?= Mage::helper('tax')->__('Add New Tax Rule') ?>
+        </button>
+    </div>
 </div>
