--- a/app/design/frontend/base/default/layout/bundle.xml
+++ b/app/design/frontend/base/default/layout/bundle.xml
@@ -6,6 +6,7 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022 The OpenMage Contributors (https://openmage.org)
+ * @copyright   Copyright (c) 2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -186,7 +187,7 @@ Additional block for bundle product type
     <PRODUCT_TYPE_bundle translate="label" module="bundle">
         <label>Catalog Product View (Bundle)</label>
         <reference name="head">
-            <action method="addItem"><type>skin_js</type><name>js/bundle.js</name></action>
+            <action method="addJs"><script>varien/product_bundle.js</script></action>
         </reference>
         <reference name="product.info">
             <action method="addPriceBlockType"><type>bundle</type><block>bundle/catalog_product_price</block><template>bundle/catalog/product/price.phtml</template></action>
